Feature/2.0 polishing (#29)
* Hide buttons when user lacks permissions

* Remove todos which are done

* Fix typos

* Code cleanup

* Refactor shift method to not return the new value

* Small adjustments

* Prevent world edit from registering default brush on items which have no brush

* Remove redundant shift return value

* Compile against fawe. Fix missing method when compiling with world edit or FAWE

* Add Protocol Lib as SoftDepend

* Use method handle for reflections

* Add argument assertions for modifier parsing

* Move implementations from api to core and replace with interface

* Bump eldo util version

* Move presets to own file

* Fix errors caused by api refactoring

* Reformatting, documentation and some small adjustments

* Add action bar message on schematic flip, rotation change

* Use swap hand event to skip schematic in favor of FAWE

* Simplify permission concatenation

* Switch back to WorldEdit API. Hope my PR gets accepted

* Fix some formatting errors in the session renderer

* Update dependencies

* Fix typos and add some assertions and logging

* Enhance Text UIs

* Add command to reload schematics of a brush or brush builder

* Code adjustments and cleanup

* Update Readme

* Rename ReloadSchematics to ReloadCache

* Prevent Presets from beeing modified after loading

* Minor Text adjustments and bugfixes

* bump version

* Change eldo util location

* Publish java component instead of artifacts

* Adjust dependencies

* Bump eldo util version

* Small changes and adjustments

* Remove snapshot version

* Cleanup build files